cmake_minimum_required(VERSION 2.8.9)

project(BSplineDeformableRegistration)

#-----------------------------------------------------------------------------
# Extension meta-information
set(EXTENSION_HOMEPAGE "http://wiki.slicer.org/slicerWiki/index.php/Documentation/Nightly/Modules/BSplineDeformableRegistration")
set(EXTENSION_CATEGORY "Legacy.Registration")
set(EXTENSION_CONTRIBUTORS "Bill Lorensen (GE)")
set(EXTENSION_DESCRIPTION "Registers two images together using BSpline transform and mutual information.")
set(EXTENSION_ICONURL "")
set(EXTENSION_SCREENSHOTURLS "")

#-----------------------------------------------------------------------------
# Extension dependencies
find_package(Slicer REQUIRED)
include(${Slicer_USE_FILE})

#-----------------------------------------------------------------------------
# Extension modules
add_subdirectory(BSplineDeformableRegistration)
## NEXT_MODULE

#-----------------------------------------------------------------------------
include(${Slicer_EXTENSION_CPACK})
